# Account

api/: .env  init.py  main.py  pyproject.toml
api/database/: __init__.py  func.py  table.py
api/database/crud/: __init__.py
api/database/crud/user/: __init__.py
api/database/models/: __init__.py
api/database/schemas/: __init__.py  user.py  user_captcha.py  user_token.py
api/router/: __init__.py  oauth.py  root.py
api/router/user/: __init__.py
api/utils/: config.py  encryption.py  middleware.py  status_code.py
web/: .eslintrc.cjs  README.md  package.json  tailwind.config.js
web/src/: main.js
web/src/components/Footer/: FooterComp.vue
web/src/components/Header/: HeaderComp.vue
web/src/router/: index.js
web/src/views/: DashView.vue  LoginView.vue  RegisterView.vue
