[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Steven Moder <java20131114@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.8"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.15" }
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pyyaml = "^6.0"
pymysql = "^1.0.3"
pyjwt = "^2.7.0"
passlib = "^1.7.4"
uuid = "^1.30"
autopep8 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
